; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_scaler_conf_eq.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_scaler_conf_eq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scaler_config = type { i64, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scaler_config*, %struct.scaler_config*)* @scaler_conf_eq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scaler_conf_eq(%struct.scaler_config* byval(%struct.scaler_config) align 8 %0, %struct.scaler_config* byval(%struct.scaler_config) align 8 %1) #0 {
  %3 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %0, i32 0, i32 3
  %4 = load i32, i32* %3, align 4
  %5 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %1, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @scaler_fun_eq(i32 %4, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %28

9:                                                ; preds = %2
  %10 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %0, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %1, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = call i64 @scaler_fun_eq(i32 %11, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %9
  %17 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %0, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %1, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %18, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %16
  %23 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %0, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.scaler_config, %struct.scaler_config* %1, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %24, %26
  br label %28

28:                                               ; preds = %22, %16, %9, %2
  %29 = phi i1 [ false, %16 ], [ false, %9 ], [ false, %2 ], [ %27, %22 ]
  %30 = zext i1 %29 to i32
  ret i32 %30
}

declare dso_local i64 @scaler_fun_eq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
